--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
-    <string name="app_name">SDA_A5_2024_BradleyWeibel</string>
+    <!-- General -->
+    <string name="app_name">Lyricist</string>
+    <string name="next">Next</string>
+    <string name="back_to_home">Back to Home</string>
+
+    <!-- Song handling -->
+    <string name="song_name">song name...</string>
+    <string name="edit_song_name">new song name...</string>
+    <string name="delete_song_warning">Friggin\' sure you want to delete this song and all it\'s versions?</string>
+    <!-- Version handling -->
+    <string name="version_name">version name...</string>
+    <string name="delete_version_warning">Doubly sure you want to delete this version of this song?</string>
 </resources>
