--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,13 +2,33 @@
     <!-- General -->
     <string name="app_name">Lyricist</string>
     <string name="next">Next</string>
+    <string name="back">Back</string>
+    <string name="edit">Edit</string>
+    <string name="add_new_song">Add new song</string>
+    <string name="add_new_version">Add new version</string>
+    <string name="delete">Delete</string>
     <string name="back_to_home">Back to Home</string>
+    <string name="save">Save changes</string>
+    <string name="creation_date">[Creation Date]</string>
+    <string name="modified_date">[Modified Date]</string>
 
     <!-- Song handling -->
     <string name="song_name">song name...</string>
     <string name="edit_song_name">new song name...</string>
+    <string name="toastr_missing_song_name">Please enter a song name...</string>
+    <string name="toastr_unique_song_name">Please enter a unique song name...</string>
+    <string name="toastr_song_and_version_added">A new song-writing journey begins...</string>
     <string name="delete_song_warning">Friggin\' sure you want to delete this song and all it\'s versions?</string>
+
     <!-- Version handling -->
     <string name="version_name">version name...</string>
-    <string name="delete_version_warning">Doubly sure you want to delete this version of this song?</string>
+    <string name="version">Version</string>
+    <string name="version_description">description...</string>
+    <string name="description">Description</string>
+    <string name="version_lyrics">lyrics...</string>
+    <string name="lyrics">Lyrics</string>
+    <string name="toastr_missing_version_name">Please enter a version name...</string>
+    <string name="toastr_unique_version_name">Please enter a unique version name for this song...</string>
+    <string name="toastr_new_version_created">New song version created...</string>
+    <string name="delete_version_warning">Doubly sure you want to delete this version of your song?</string>
 </resources>
