14th commit. Stable version. Search bar on home screen working. TODO next: scrolling on all pages that need it.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,9 @@
     <string name="creation_date">[Creation Date]</string>
     <string name="modified_date">[Modified Date]</string>
 
+    <!-- Home screen -->
+    <string name="search_songs">filter...</string>
+
     <!-- Song handling -->
     <string name="song_name">song name...</string>
     <string name="edit_song_name">new song name...</string>
