17th commit. Incomplete version. New photos can be taken and inserted into external storage. Photos are specific to version of song. Drawback of current version, these images are not removable at present and are easily turned into zombie data. Version naming is on it's own page as the version name is needed for naming images and later other media uploads. TODO next: finish new image features and checkin a stable version.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,6 @@
     <string name="toastr_missing_version_name">Please enter a version name...</string>
     <string name="toastr_unique_version_name">Please enter a unique version name for this song...</string>
     <string name="toastr_new_version_created">New song version created...</string>
+    <string name="toastr_version_updated">Song version updated...</string>
     <string name="delete_version_warning">Doubly sure you want to delete this version of your song?</string>
 </resources>
