21st commit. Stable (at times slow due to images) version. Little refactor. Removal of READ permission. Dynamic removal of non-used UI elements in ViewVersionData. TODO: (1) remove extra screen for name of version (no longer needed) (2) improve speed of images (then images are finished). (3) video support.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="save">Save changes</string>
     <string name="creation_date">[Creation Date]</string>
     <string name="modified_date">[Modified Date]</string>
+    <string name="permissions_toastr_warning">Please accept all permission prompts to use these features</string>
 
     <!-- Home screen -->
     <string name="search_songs">filter...</string>
